Update logo link

--- a/demo.html
+++ b/demo.html
@@ -52,7 +52,7 @@
         border-bottom-left-radius: 8px;
         border-bottom-right-radius: 8px;
       }
-      
+
       .historySpan {
         margin: 4px;
         font-size: 12px;
@@ -84,7 +84,7 @@
         <div class="container">
           <div class="header__content">
             <div class="header__top">
-              <a class="logo" href="/">ProYav</a>
+              <a class="logo" href="./index.html">ProYav</a>
               <a class="icon" href="./index.html#proyav">ПРО ProYav</a>
               <a class="icon" href="./index.html#advantages">ПЕРЕВАГИ</a>
               <a class="icon" href="./index.html#howwork">ЯК ЦЕ ПРАЦЮЄ</a>
@@ -96,19 +96,16 @@
     </header>
     <main>
       <section class="demo section">
-        <div id="historyContainer" style="
-          position: absolute; right: 20px">
-        </div>
+        <div
+          id="historyContainer"
+          style="position: absolute; right: 20px"
+        ></div>
         <div class="container">
           <h2 class="demo__title">Спробуй ProYav</h2>
           <div class="demo-container" id="video-container">
             <div
               id="emojiContainer"
-              style="
-                font-size: 50px;
-                position: absolute;
-                top: 20px;
-              "
+              style="font-size: 50px; position: absolute; top: 20px"
             ></div>
             <video
               id="video"
@@ -126,7 +123,7 @@
         <div class="container">
           <div class="header__content">
             <div class="header__top">
-              <a class="logo" href="/">ProYav</a>
+              <a class="logo" href="./index.html">ProYav</a>
               <a class="icon" href="./index.html#pruav">ПРО ProYav</a>
               <a class="icon" href="./index.html#advantages">ПЕРЕВАГИ</a>
               <a class="icon" href="./index.html#howwork">ЯК ЦЕ ПРАЦЮЄ</a>
