--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="container">
           <div class="header__content">
             <div class="header__top">
-              <a class="logo" href="/">ProYav</a>
+              <a class="logo" href="./index.html">ProYav</a>
               <a class="icon" href="#proyav">ПРО ProYav</a>
               <a class="icon" href="#advantages">ПЕРЕВАГИ</a>
               <a class="icon" href="#howwork">ЯК ЦЕ ПРАЦЮЄ</a>
@@ -316,7 +316,7 @@
         <div class="container">
           <div class="header__content">
             <div class="header__top">
-              <a class="logo" href="/">ProYav</a>
+              <a class="logo" href="./index.html">ProYav</a>
               <a class="icon" href="#proyav">ПРО ProYav</a>
               <a class="icon" href="#advantages">ПЕРЕВАГИ</a>
               <a class="icon" href="#howwork">ЯК ЦЕ ПРАЦЮЄ</a>
