--- a/statistics.html
+++ b/statistics.html
@@ -30,7 +30,7 @@
         <div class="container">
           <div class="header__content">
             <div class="header__top">
-              <a class="logo" href="/">ProYav</a>
+              <a class="logo" href="./index.html">ProYav</a>
               <a class="icon" href="./index.html#proyav">ПРО ProYav</a>
               <a class="icon" href="./index.html#advantages">ПЕРЕВАГИ</a>
               <a class="icon" href="./index.html#howwork">ЯК ЦЕ ПРАЦЮЄ</a>
@@ -51,7 +51,9 @@
                 <img src="./src/images/happy.png" width="150" />
               </div>
               <div>
-                <p class="stats-item__text">Сьогодні ти посміхався <span id="happy"></span> рази.</p>
+                <p class="stats-item__text">
+                  Сьогодні ти посміхався <span id="happy"></span> рази.
+                </p>
                 <p class="stats-item__text">Треба повторити!</p>
               </div>
             </li>
@@ -61,7 +63,9 @@
                 <img src="./src/images/surprised.png" width="150" />
               </div>
               <div>
-                <p class="stats-item__text">Сьогодні ти дивувався <span id="surprised"></span> рази.</p>
+                <p class="stats-item__text">
+                  Сьогодні ти дивувався <span id="surprised"></span> рази.
+                </p>
                 <p class="stats-item__text">Життя має багато сюрпризів!</p>
               </div>
             </li>
@@ -71,7 +75,9 @@
                 <img src="./src/images/sad.png" width="150" />
               </div>
               <div>
-                <p class="stats-item__text">Сьогодні ти сумував <span id="sad"></span> рази.</p>
+                <p class="stats-item__text">
+                  Сьогодні ти сумував <span id="sad"></span> рази.
+                </p>
                 <p class="stats-item__text">Тримай хвоста пістолетом!</p>
               </div>
             </li>
@@ -82,7 +88,8 @@
               </div>
               <div>
                 <p class="stats-item__text">
-                  Сьогодні ти відчував роздратованість <span id="angry"></span> рази.
+                  Сьогодні ти відчував роздратованість
+                  <span id="angry"></span> рази.
                 </p>
                 <p class="stats-item__text">Візьми хвилинку, побалуй себе!</p>
               </div>
@@ -94,7 +101,8 @@
               </div>
               <div>
                 <p class="stats-item__text">
-                  Сьогодні ти відчував відразу <span id="disgusted"></span> рази.
+                  Сьогодні ти відчував відразу
+                  <span id="disgusted"></span> рази.
                 </p>
                 <p class="stats-item__text">Знайти та знешкодити!</p>
               </div>
@@ -120,7 +128,7 @@
         <div class="container">
           <div class="header__content">
             <div class="header__top">
-              <a class="logo" href="/">ProYav</a>
+              <a class="logo" href="./index.html">ProYav</a>
               <a class="icon" href="./index.html#pruav">ПРО ProYav</a>
               <a class="icon" href="./index.html#advantages">ПЕРЕВАГИ</a>
               <a class="icon" href="./index.html#howwork">ЯК ЦЕ ПРАЦЮЄ</a>
@@ -129,6 +137,7 @@
           </div>
         </div>
       </nav>
-    </footer>>
+    </footer>
+    >
   </body>
 </html>
