--- a/index.html
+++ b/index.html
@@ -222,7 +222,10 @@
                   </p>
                 </li>
                 <li class="howto-list__button">
-                  <a href="#" class="howto__button btn"
+                  <a
+                    href="https://github.com/Arag0rn/FaseEmotion"
+                    target="_blank"
+                    class="howto__button btn"
                     >Завантажити розширення</a
                   >
                 </li>
